[BUGFIX] Accordion breaks BE

--- a/Resources/Private/Templates/Content/Accordion.html
+++ b/Resources/Private/Templates/Content/Accordion.html
@@ -60,7 +60,7 @@
                     						<flux:flexform.renderContent area="content.{iteration.index}" />
       											</div>
     										</div>
-    								</else>
+    								</f:else>
     						</f:if>
   					</div>
         </f:for>
