--- a/Resources/Private/Templates/Content/Button.html
+++ b/Resources/Private/Templates/Content/Button.html
@@ -7,8 +7,8 @@
      xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
 
 		 <f:section name="Configuration">
-				 <flux:form wizardTab="TWBS" id="button" 
-						 icon="{v:extension.path.resources(path: 'Icons/Button.gif')}"
+				 <flux:form id="button" 
+						options="{group:'TWBS', icon:'../typo3conf/ext/fluidcontent_twbs/Resources/Public/Icons/Button.gif'}"
 						 label="Button" description="">
 
 						 <flux:field.input name="target" label="Enlace">
