--- a/Resources/Private/Templates/Content/Tabs.html
+++ b/Resources/Private/Templates/Content/Tabs.html
@@ -7,8 +7,8 @@
 		 xmlns:f="http://typo3.org/ns/fluid/ViewHelpers">
 
 		 <f:section name="Configuration">
-			 <flux:form wizardTab="TWBS" id="tabs" 
-				 icon="{v:extension.path.resources(path: 'Icons/Tabs.gif')}"
+			 <flux:form id="tabs"
+						options="{group:'TWBS', icon:'../typo3conf/ext/fluidcontent_twbs/Resources/Public/Icons/Tabs.gif'}"
 				 label="Tabs" description="">
 
 				 <flux:form.section name="panels" label="Tabs">
